@startuml
' Cấu hình hiển thị đường nối vuông góc chuẩn ERD
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50

' Tùy chỉnh thẩm mỹ theo chuẩn UML Distilled
skinparam entity {
    BackgroundColor #FAFAFA
    BorderColor #1565C0
    HeaderBackgroundColor #E3F2FD
    FontName sans-serif
}

' ==========================================
' PHÂN HỆ ĐỊNH DANH (IAM)
' ==========================================
entity "Role" as Role {
    * id : UUID <<PK>>
    --
    * name : VARCHAR
    description : TEXT
}

entity "User" as User {
    * id : UUID <<PK>>
    --
    * role_id : UUID <<FK>>
    * email : VARCHAR
    * password_hash : VARCHAR
    full_name : VARCHAR
    created_at : TIMESTAMP
}

' ==========================================
' PHÂN HỆ HỌC LIỆU & CMS (CONTENT)
' ==========================================
entity "Model3D" as Model3D {
    * id : UUID <<PK>>
    --
    * created_by : UUID <<FK>>
    * title : VARCHAR
    * file_url : VARCHAR
    * status : ENUM (DRAFT, ACTIVE, INACTIVE)
    updated_at : TIMESTAMP
}

entity "Theory" as Theory {
    * id : UUID <<PK>>
    --
    * model_id : UUID <<FK>>
    * content : TEXT
    * status : ENUM
}

entity "Exercise" as Exercise {
    * id : UUID <<PK>>
    --
    * model_id : UUID <<FK>>
    * created_by : UUID <<FK>>
    * question : TEXT
    * options : JSONB
    * correct_answer : VARCHAR
    * status : ENUM
}

' ==========================================
' PHÂN HỆ ĐÁNH GIÁ (ASSESSMENT)
' ==========================================
entity "ExerciseSubmission" as Submission << (M, #FFF3E0) map >> {
    * user_id : UUID <<PK, FK>>
    * exercise_id : UUID <<PK, FK>>
    --
    * submitted_answer : VARCHAR
    * score : FLOAT
    * submitted_at : TIMESTAMP
}

' ==========================================
' ĐỊNH NGHĨA MỐI QUAN HỆ (CROW'S FOOT NOTATION)
' ==========================================
Role ||--o{ User : "has"
User ||--o{ Model3D : "creates/manages"
User ||--o{ Exercise : "creates (Instructor)"

Model3D ||--o{ Theory : "contains"
Model3D ||--o{ Exercise : "contains"

User ||--o{ Submission : "submits"
Exercise ||--o{ Submission : "receives"

@enduml